# apollo-gateway-rs

./: Cargo.toml  README.md
apollo-gateway-rs/: Cargo.toml
apollo-gateway-rs/src/: lib.rs
apollo-gateway-rs/src/datasource/: mod.rs
apollo-gateway-rs/src/handler/: executor.rs  mod.rs  service_route.rs  shared_route_table.rs
apollo-gateway-rs/src/handler/introspection/: enum_value.rs  input_value.rs  mod.rs  resolver.rs  root.rs  type.rs
apollo-gateway-rs/src/handler/websocket/: controller.rs  protocol.rs  subscription.rs
apollo-gateway-rs/src/planner/: builder.rs  mod.rs  plan.rs  request.rs  response.rs  types.rs
apollo-gateway-rs/src/schema/: composed_schema.rs  error.rs  mod.rs
apollo-gateway-rs/src/validation/: mod.rs  utils.rs
apollo-gateway-rs/src/validation/rules/: arguments_of_correct_type.rs  default_values_of_correct_type.rs  known_directives.rs  known_type_names.rs  no_fragment_cycles.rs  no_undefined_variables.rs  no_unused_fragments.rs  overlapping_fields_can_be_merged.rs  possible_fragment_spreads.rs  unique_argument_names.rs  unique_variable_names.rs  variables_are_input_types.rs
crates/datasource/: Cargo.toml
crates/datasource/src/: lib.rs
crates/handler/: Cargo.toml
crates/handler/src/: constants.rs  executor.rs  fetcher.rs  handler.rs  lib.rs  metrics.rs  service_route.rs  shared_route_table.rs
crates/handler/src/websocket/: controller.rs  grouped_stream.rs  mod.rs  protocol.rs  server.rs  subscription.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs  plan.rs  request.rs  response.rs
crates/schema/: Cargo.toml
crates/validation/: Cargo.toml
examples/: Cargo.toml  build.rs
examples/actix/: main.rs
examples/actix/authentication/: main.rs
examples/actix/common_usage/: main.rs
examples/actix/from_config/: main.rs
examples/actix/grpc/: main.rs
examples/sources/auth_source/: main.rs
examples/sources/grpc_source/: api.proto  main.rs
examples/sources/todo_source/: main.rs
graphql-types/: Cargo.toml
graphql-types/src/: lib.rs
graphtonic/: Cargo.toml
graphtonic/src/: client.rs  lib.rs  server.rs
src/: lib.rs
src/datasource/: mod.rs
src/handler/: executor.rs  fetcher.rs  service_route.rs  shared_route_table.rs
src/handler/introspection/: field.rs  root.rs  schema.rs
src/handler/websocket/: controller.rs  grouped_stream.rs  mod.rs  subscription.rs
src/planner/: builder.rs  request.rs  types.rs
src/schema/: composed_schema.rs
src/validation/: mod.rs  test_harness.rs  utils.rs  visitor.rs
src/validation/rules/: fields_on_correct_type.rs  fragments_on_composite_types.rs  known_argument_names.rs  known_fragment_names.rs  no_unused_variables.rs  overlapping_fields_can_be_merged.rs  possible_fragment_spreads.rs  provided_non_null_arguments.rs  scalar_leafs.rs  variables_in_allowed_position.rs
tests/: from_config.rs
