[package]
name = "graphql-gateway"
version = "0.7.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]
readme = "README.md"

[dependencies]
graphgate-handler = { path = "./crates/handler" }
datasource = {path = "./crates/datasource"}
graphgate-planner = {path = "./crates/planner"}
serde = { version = "1.0.133", features = ["derive"] }
anyhow = "1.0.52"
k8s-openapi = { version = "0.13.1", features = ["v1_22"], default-features = false }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
futures-util = "0.3.19"
tracing = "0.1.29"
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "metrics"] }
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix = "0.13.0"
async-graphql = { version = "3.0.24", features = ["apollo_tracing"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3.2"

[dev-dependencies]
tracing-actix-web = { version =  "0.5", features = ["opentelemetry_0_16"] }
tracing = "0.1"
actix-identity = "0.4.0"
async-graphql-warp = "3.0.24"
fastrand = "1.6.0"
async-stream = "0.3.2"
futures-util = "0.3.19"

[[example]]
name = "actix"
path = "./examples/actix/main.rs"

[workspace]
members = [
    "crates/schema",
    "crates/planner",
    "crates/validation",
    "crates/handler",
    "crates/datasource"
]
