[package]
name = "apollo-gateway-rs"
version = "0.7.9"
authors = ["K0R0VA m.yarykov@gmail.com", "Sunli <scott_s829@163.com>"]
edition = "2021"
description = "Apollo-gateway-rs is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/K0R0VA/apollo-gateway-rs.git"
repository = "https://github.com/K0R0VA/apollo-gateway-rs.git"
keywords = ["apollo-federation", "gateway", "graphql", "federation"]
categories = ["web", "graphql", "http"]
readme = "../README.md"

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
anyhow = "1.0.52"
k8s-openapi = { version = "0.14.0", features = ["v1_22"], default-features = false }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
futures-util = "0.3.19"
tracing = "0.1.29"
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "metrics"] }
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix = "0.13.0"
once_cell = "1.10.0"
parser = { version = "3.0.24", package = "async-graphql-parser" }
value = { version = "3.0.24", package = "async-graphql-value" }
indexmap = { version = "1.8.0", features = ["serde-1"] }
serde_json = "1.0.79"
http = "0.2.6"
tokio-tungstenite = { version = "0.16.1", features = ["rustls-tls-native-roots"] }
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
async-trait = "0.1.53"
async-stream = "0.3.3"



