[package]
name = "apollo-gateway-rs"
version = "0.9.0"
authors = ["K0R0VA m.yarykov@gmail.com", "Sunli <scott_s829@163.com>"]
edition = "2021"
description = "Apollo-gateway-rs is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/K0R0VA/apollo-gateway-rs.git"
repository = "https://github.com/K0R0VA/apollo-gateway-rs.git"
keywords = ["apollo-federation", "gateway", "graphql", "federation"]
categories = ["web", "graphql", "http"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
k8s-openapi = { version = "0.18", features = ["v1_22"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
futures-util = "0.3"
tracing = "0.1"
opentelemetry = { version = "0.19", features = ["rt-tokio", "metrics"] }
actix-web = "4"
actix-web-actors = "4.1"
actix = "0.13"
once_cell = "1"
parser = { version = "6", package = "async-graphql-parser" }
value = { version = "6", package = "async-graphql-value" }
indexmap = { version = "2", features = ["serde"] }
serde_json = "1"
http = "0.2.6"
tokio-tungstenite = { version = "0.16", features = ["rustls-tls-native-roots"] }
thiserror = "1.0.30"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
async-trait = "0.1"
async-stream = "0.3"



