[package]
authors = ["K0R0VA m.yarykov@gmail.com"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "auth_source"
path = "sources/auth_source/main.rs"

[[bin]]
name = "todo_source"
path = "sources/todo_source/main.rs"

[[bin]]
name = "common_usage"
path = "actix/common_usage/main.rs"

[[bin]]
name = "authentication"
path = "actix/authentication/main.rs"

[[bin]]
name = "from_config"
path = "actix/from_config/main.rs"

# [[bin]]
# name = "grpc"
# path = "actix/grpc/main.rs"

[dependencies]
tracing-actix-web = { version = "0.7.5", features = ["opentelemetry_0_16"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
async-graphql = "5.0.10"
async-trait = "0.1.53"
anyhow = "1.0.57"
actix-web = "4.0.1"
tracing = "0.1"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
chrono = "0.4.19"
actix-identity = "0.5.2"
futures = { version = "0.3.21",  features = ["compat"] }
jsonwebtoken = "8.1.0"
actix-service = "2.0.2"
fastrand = "1.6.0"
async-stream = "0.3.2"
futures-util = "0.3.19"
async-graphql-actix-web = "5.0.10"
argonautica = { version = "0.2.0" }
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"]}
apollo-gateway-rs = { path = "../apollo-gateway-rs" }