[package]
name = "graphql-types"
version = "0.0.1"
authors = ["K0R0VA m.yarykov@gmail.com"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/K0R0VA/apollo-gateway-rs.git"
repository = "https://github.com/K0R0VA/apollo-gateway-rs.git"
keywords = ["grpc", "graphql"]
categories = ["web", "graphql", "grpc", "http"]
readme = "../README.md"

[dependencies]
tonic = "0.7.2"
prost = "0.10.3"



