[package]
name = "datasource"
version = "0.7.0"
authors = ["K0R0VA m.yarykov@gmail.com", "Sunli <scott_s829@163.com>"]
edition = "2021"
description = "apollo-gateway-rs is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
keywords = ["gateway", "graphql", "federation"]


[dependencies]
actix-web = "4.0.1"
async-trait = "0.1.53"
graphgate-planner = {path = "../planner"}
anyhow = "1.0.56"
