[package]
name = "graphgate-schema"
version = "0.5.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
parser = { version = "3.0.24", package = "async-graphql-parser" }
value = { version = "3.0.24", package = "async-graphql-value" }
thiserror = "1.0.30"
indexmap = { version = "1.8.0", features = ["serde-1"] }
